# seagent1.0-main_asr

./: .gitignore  Makefile  README.md  backend_logging.py  index.html  port_forward.py  probe_claim_cleanup.py  probe_final_exists_staging.py  probe_load_snapshot_schema.py  probe_lock_blocking.py  probe_temp_rollback.py  pyproject.toml  requirements.txt  run.py  session.py  web_backend.py
.agents/: AGENTS.md  README.md
config/: asr.yaml  assets.yaml  constraints.yaml  environment.yaml  robot_fleet.yaml  state.yaml  task_schemas.yaml  translation_cache.json  translation_cache.json.bak
frontend/: index.html
scripts/: run_real_llm_verification.py
src/: __init__.py  asr_normalizer.py  asr_service.py  coord_parser.py  dialogue_manager.py  environment_info.py  exceptions.py  extractor.py  history_manager.py  id_sequence.py  intent_router.py  knowledge_retriever.py  llm_client.py  normalizer.py  oilfield_linker.py  output_builder.py  prompts.py  result_paths.py  simulated_time.py  slot_store.py  state_info.py  task_intent_builder.py  time_context.py  validator.py
tests/: run_accumulation_integration_tests.py  run_chrome_e2e.py  test_adversarial_p0.py  test_asr_api.py  test_asr_normalizer.py  test_asr_service.py  test_dialogue_manager_rov.py  test_frontend_integrity.py  test_intent_routing.py  test_oilfield_linker.py  test_p0_boundary_closeout.py  test_p0_final_closeout.py  test_p0_final_consistency.py  test_p0_p1_boundary_fixes.py  test_p0_publish_race_and_router_closeout.py  test_p0_security_final_closeout.py  test_p0_true_final_closeout.py  test_slot_consistency.py  (+7 more)
(+13 files in other folders)
